[package]
name = "shared-bus-rtic"
version = "0.1.0"
authors = ["Ryan Summers <ryan.summers@vertigo-designs.com>"]
description = "Provides macros and type definitions for sharing peripheral communication buses in an RTIC application"
categories = ["embedded", "concurrency", "no-std", "hardware-support"]
keywords = ["shared-bus", "embedded", "i2c", "spi", "embedded-hal"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared-bus = "0.1.4"
